--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 
     <title>GameChatSite | Chat and game</title>
   </head>
-  <body>
+  <body style="background-color: navajowhite;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
