--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFE1AC" />
     <meta name="description" content="Play you're favorite chat games here!" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
